assets/css/styles.css
/* ... */
.testimonial .left {
    width: 36%;
    /* flex-shrink: 0; */
}

.testimonial .right {
    margin-left: auto;
}

.testimonial .left .icon {
    /* margin-top: 37px; */
}
.testimonial .left blockquote {
    margin-top: 27px;
    color: #5d6564;
    font-size: 3.2rem;
    line-height: 1.5;
}
.testimonial .left .author {
    margin-top: 33px;
    color: #767e7e;
    font-size: 1.6rem;
    line-height: normal;

    display: flex;
    align-items: center;
    gap: 5px;
}

.testimonial .left .author::before {
    content: "";
    display: inline-block;
    width: 8px;
    height: 2px;
    background: #070707;
}

.testimonial .left .author strong {
    color: #070707;
    font-weight: 500;
}

.testimonial .left .change-actions {
    margin-top: 52px;
    display: flex;
    gap: 30px;
}

.change-actions .btn-change {
    cursor: pointer;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: none;
    background-color: #2ac9bf;
}

.change-actions .btn-change:hover {
    opacity: 0.8;
}
.change-actions .btn-change svg {
    color: white;
}

.testimonial .right {
    aspect-ratio: 7 / 5;
    --width: 100%;
    --height: 100%;
    width: 58%;
    z-index: 1f;
    position: relative;
}

.testimonial .right .item {
    position: absolute;
    border-radius: 9999px;
    background-size: cover;
    background-repeat: no-repeat;
    background-clip: padding-box;

    border: 2px solid #b170701d;
    transition: all 0.25s linear;
    color: #fff;
    z-index: 999;
}

.testimonial .right .item.item1 {
    top: calc(var(--height) * 0.225);
    right: calc(var(--width) * 0.25);

    width: calc(var(--width) * 0.35);
    aspect-ratio: 1;

    background-color: #ff8282;
}

.testimonial .right .item.item2 {
    top: 0;
    left: calc(var(--width) * 0.21);

    width: calc(var(--width) * 0.135);
    aspect-ratio: 1;

    background-color: #1ebfc1;
}

.testimonial .right .item.item3 {
    top: calc(var(--height) * 0.04);
    right: 0;

    width: calc(var(--width) * 0.162);
    aspect-ratio: 1;

    background-color: #bf83ff;
}

.testimonial .right .item.item4 {
    top: calc(var(--width) * 0.536);
    left: 0;

    width: calc(var(--width) * 0.115);
    aspect-ratio: 1;

    background-color: #ffc147;
}

.testimonial .right .item.item5 {
    left: calc(var(--width) * 0.312);
    bottom: 0;

    width: calc(var(--width) * 0.115);
    aspect-ratio: 1;

    background-color: #ff947a;
}

.testimonial .right .item.item6 {
    right: calc(var(--width) * 0.047);
    bottom: calc(var(--height) * 0.06);

    width: calc(var(--width) * 0.115);
    aspect-ratio: 1;

    background-color: #b1dfdc;
}

/* Section CTA */

.section-cta {
    margin-top: 65px;
    padding: 76px 0 88px;
    background-color: #def6f5;
}

.section-cta .row {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.section-cta .left {
    width: 36%;
}
.section-cta .left .title {
    color: #070707;
    font-size: 4.2rem;
    font-weight: 700;
    line-height: normal;
}

.section-cta .left .desc {
    margin-top: 18px;
    color: #767e7e;
    font-size: 1.8rem;
    line-height: normal;
}

.section-cta .right .btn {
    margin-right: 154px;
}

/* Footer */
.footer {
    margin-top: 65px;
    padding: 65px 0 50px;
}

.footer .row {
    display: flex;
    justify-content: space-between;
}

.footer .column {
    width: 13.5%;
}
.footer .heading {
    color: #2e2e2e;
    font-size: 1.8rem;
    font-weight: 500;
    line-height: normal;
}
.footer .socials,
.footer .list {
    margin-top: 25px;
}

.footer .socials li + li,
.footer .list li + li {
    margin-top: 18px;
}

.footer .list li a {
    color: #535353;
    font-size: 1.6rem;
    line-height: normal;
}

.footer .socials li a {
    display: flex;
    align-items: center;
    gap: 9px;
    color: #535353;
    font-size: 1.6rem;
    line-height: normal;
}

.footer .list li:hover a,
.footer .socials li:hover a {
    text-decoration: underline;
}

.footer .copyright {
    margin-top: 80px;
    color: #b0b5b4;
    font-size: 1.8rem;
    text-align: center;
    line-height: normal;
}

